--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @import 'screenshots';
 @import 'aside';
 @import 'our-latest-projects';
+@import 'presentation';
 
 // ================================================== general rules
 .main {
@@ -27,12 +28,7 @@
     @include text;
   }
 }
-// ================================================== waxom-video-presentation
-.waxom-video-presentation {
-  height: 705px;
-  border: 1px solid rgb(162, 0, 255);
-  background-image: url(/img/background-images/video-presentation.png);
-}
+
 // ================================================== excellent-for-mobile
 .excellent-for-mobile {
   height: 695px;
