--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,45 @@ h6 {
   font-style: normal;
 }
 
+.main {
+  width: 1920px;
+}
+
+.section {
+  display: flex;
+}
+
+.container {
+  width: 1171px;
+  margin: auto;
+}
+
+.textbox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.textbox-title {
+  font-size: 30px;
+  font-family: "raleway", "arial", sans-serif;
+  font-weight: 500;
+  color: #555555;
+  line-height: normal;
+  text-align: center;
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.textbox-txt {
+  font-size: 16px;
+  font-family: "montserrat", "arial", sans-serif;
+  font-weight: 300;
+  color: #8c8c8c;
+  line-height: 1.75;
+  text-align: center;
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -268,6 +307,8 @@ h6 {
   line-height: normal;
   text-align: center;
   display: block;
+  width: 100%;
+  margin-bottom: 10px;
   align-items: center;
   font-stretch: normal;
   font-style: normal;
@@ -281,6 +322,8 @@ h6 {
   line-height: normal;
   text-align: center;
   display: block;
+  width: 100%;
+  margin-bottom: 10px;
   margin: 0 auto;
 }
 .header__text {
@@ -401,6 +444,8 @@ h6 {
   line-height: normal;
   text-align: center;
   display: block;
+  width: 100%;
+  margin-bottom: 10px;
   margin: 12px 19px;
   font-stretch: normal;
   font-style: normal;
@@ -436,9 +481,6 @@ h6 {
 }
 
 .screenshots {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 80px 344px 0 344px;
   height: 700px;
   border: 1px solid rgb(162, 0, 255);
   background-color: #fbfaf8;
@@ -467,9 +509,11 @@ h6 {
   height: 150px;
   border: 1px solid rgb(0, 255, 4);
   background-image: linear-gradient(to top, #211b19, #4e3427);
+}
+
+.ad__container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
 }
 
 .ad__wrapper {
@@ -647,6 +691,8 @@ h6 {
   line-height: normal;
   text-align: left;
   display: block;
+  width: 100%;
+  margin-bottom: 10px;
 }
 .our-latsest-projects__picturebox-item-txt {
   width: 100%;
@@ -787,7 +833,7 @@ h6 {
 }
 .presentation__video-textbox-btn:hover {
   transform: rotate(360deg) scale(1.1);
-  background-color: rgba(17, 17, 17, 0.7);
+  background-color: rgba(17, 17, 17, 0.5);
   border-radius: 5%;
 }
 .presentation__video-textbox-btn:hover .presentation__video-icon {
@@ -810,6 +856,8 @@ h6 {
   line-height: normal;
   text-align: center;
   display: block;
+  width: 100%;
+  margin-bottom: 10px;
 }
 .presentation__video-textbox-text {
   margin-bottom: 35px;
@@ -829,50 +877,46 @@ h6 {
   text-align: center;
 }
 
-.video-play-btn:hover .video-play-btn-icon {
-  fill: coral;
-}
-
-.video-play-btn:active .video-play-btn-icon {
-  fill: bisque;
-}
-
-.main {
-  width: 1920px;
-}
-
-.container {
-  width: 1170px;
-}
-
-.textbox {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.textbox-title {
-  font-size: 30px;
-  font-family: "raleway", "arial", sans-serif;
-  font-weight: 500;
-  color: #555555;
-  line-height: normal;
-  text-align: center;
-  display: block;
-  width: 100%;
-}
-.textbox-txt {
-  font-size: 16px;
-  font-family: "montserrat", "arial", sans-serif;
-  font-weight: 300;
-  color: #8c8c8c;
-  line-height: 1.75;
-  text-align: center;
-}
-
 .excellent-for-mobile {
   height: 695px;
   border: 1px solid rgb(162, 0, 255);
-  background-color: #fbfaf8;
+  background-image: url(/img/background-images/efm-bg.jpg);
+}
+
+.excellent-for-mobile__container {
+  display: flex;
+  justify-content: end;
+}
+
+.excellent-for-mobile_textbox {
+  width: 660px;
+}
+
+.excellent-for-mobile_textbox-title {
+  text-align: left;
+}
+
+.excellent-for-mobile_textbox-text {
+  margin-bottom: 40px;
+  text-align: left;
+}
+
+.excellent-for-mobile_textbox-list-item {
+  text-align: left;
+  margin-left: 100px;
+  position: relative;
+}
+.excellent-for-mobile_textbox-list-item::before {
+  content: "";
+  display: block;
+  width: 21px;
+  height: 21px;
+  /* border: 1px solid; */
+  position: absolute;
+  top: 2px;
+  left: -50px;
+  background-image: url(/img/icons/arrow-icon.png);
+  background-size: cover;
 }
 
 .quantities {
