--- a/css/main.css
+++ b/css/main.css
@@ -150,7 +150,7 @@ h6 {
 }
 
 .container {
-  width: 1171px;
+  width: 1170px;
   margin: auto;
 }
 
@@ -923,6 +923,77 @@ h6 {
   height: 300px;
   border: 1px solid rgb(162, 0, 255);
   background-image: linear-gradient(to top, #211b19, #4e3427);
+  display: flex;
+}
+.quantities__container {
+  width: 920px;
+}
+.quantities__wrapper {
+  min-height: 215px;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 26px;
+  margin: 0 auto;
+}
+.quantities__item {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
+.quantities__item-img-wrapper {
+  height: 44px;
+  width: 60px;
+  margin: 0 auto 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.quantities__item-img {
+  display: block;
+  fill: #ffffff;
+}
+.quantities__item-title {
+  font-size: 48px;
+  font-family: "montserrat", "arial", sans-serif;
+  font-weight: 200;
+  color: #ffffff;
+  line-height: 0.75;
+  text-align: center;
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+  margin-bottom: 21px;
+  transition: transform 10ms;
+}
+.quantities__item-text {
+  font-size: 14px;
+  font-family: "montserrat", "arial", sans-serif;
+  font-weight: 300;
+  color: #8c8c8c;
+  line-height: 1.43;
+  text-align: center;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+}
+.quantities__item:after {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 2px;
+  background-color: #ffffff;
+}
+.quantities__item:hover .quantities__item-title {
+  color: #c7b299;
+  transform: scale(1.03);
+}
+.quantities__item:hover .quantities__item-img {
+  fill: #c7b299;
+}
+.quantities__item:hover:after {
+  background-color: #c7b299;
 }
 
 .recent-posts {
