--- a/scss/_activities.scss
+++ b/scss/_activities.scss
@@ -15,7 +15,7 @@
     gap: 26px;
   }
   &__item {
-    width: calc(100% / 4);
+    width: 25%;
     display: flex;
     flex-direction: column;
     align-items: center;
